--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# SAM packaged template
+packaged.yaml
+ses2sns/bin/*
+sns2slack/bin/*
+
+.secret
